Adding starting files of mind map and a change in direction of the app to be focused around knowledge rather than a helper

--- a/app/action/directives/actionListDirective/actionListDirective.less
+++ b/app/action/directives/actionListDirective/actionListDirective.less
@@ -9,6 +9,12 @@
     }
 }
 
+.actionListDirective__action-item--highlight {
+    padding-left: 20px;
+    color: #FFB405;
+    background-color: #182130;
+}
+
 
 .actionListDirective__icon {
     .flex(0 0 20px);
