--- a/app/core/core.less
+++ b/app/core/core.less
@@ -3,5 +3,6 @@
 @fa-font-path: "/bower_components/font-awesome/fonts";
 @import "/bower_components/lesshat/build/lesshat.less";
 
+@import 'theme/color.less';
 @import 'theme/layout.less';
 @import 'theme/scaffolding.less';
