--- a/app/mindMap/mindMap.less
+++ b/app/mindMap/mindMap.less
@@ -1,1 +1,3 @@
+@import 'directives/canvasDirective/canvasDirective.less';
 @import 'directives/mindMapDirective/mindMapDirective.less';
+@import 'directives/nodeDirective/nodeDirective.less';
