--- a/app/dashboard/components/dashboardComponent.less
+++ b/app/dashboard/components/dashboardComponent.less
@@ -5,7 +5,7 @@
 
 .dashboardComponent__sideBar {
     .flex(0 0 200px);
-    background: #182c3a;
+    background: @color-big-stone;
     .box-shadow(4px 0px 13px -2px rgba(0,0,0,0.5));
     z-index: 1;
 }
@@ -14,6 +14,9 @@
     .flex(1 0 0px);
     background: #ffffff;
     height: 100%;
+    color: #000;
+    .display(flex);
+    .flex-direction(column);
 }
 
 .dashboardComponent__logo {
@@ -22,4 +25,12 @@
     line-height: 1em;
     padding: 20px 24px 25px 20px;
     text-align: center;
+}
+
+qa-heuristics {
+    .flex(0 0 300px);
+}
+
+qa-mind-map {
+    .flex(1 0 0px);
 }
